<resources>
    <string name="app_name">Etsy Items</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_details">Details</string>
    <string name="etsy_shop">Etsy Shop</string>
    <string name="search_placeholder">Search for items on Etsy</string>
    <string name="search_icon">search icon</string>
    <string name="welcome">Welcome</string>
    <string name="about">This app pulls shop and item details from the Etsy public API</string>
    <string name="about_search">Search for items</string>
    <string name="about_user">Visit a users shop</string>
    <string name="about_item">View item details</string>
    <string name="loading_items">LOADING ETSY ITEMS</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="featured">FEATURED</string>
    <string name="trending">TRENDING</string>
    <string name="active">ACTIVE</string>
    <string name="no_results_found">no results found</string>
    <string name="load_more">LOAD MORE</string>
    <string name="item_title">Title</string>
    <string name="item_details">Item Details</string>
    <string name="overview">Overview</string>
    <string name="item_price">$0.00</string>
    <string name="item_description">Item Description</string>
    <string name="etsy_image">Etsy Image</string>
    <string name="user_name">username</string>
    <string name="quantity">QUANTITY </string>
    <string name="materials">MATERIALS</string>
    <string name="tags">TAGS</string>
    <string name="Favorites">FAVORITES</string>
    <string name="views">VIEWS</string>
    <string name="zero">0</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="view_shop">VIEW SHOP</string>
    <string name="item_name">ITEM NAME</string>
    <string name="title_activity_search">Search</string>
    <string name="etsyItems">Etsy Items</string>
    <string name="listing_image">Listing image</string>
    <string name="logo">khaldane logo</string>
    <string name="scroll_up">Scroll up to refresh</string>
    <string name="scroll_down">Scroll down to load more</string>
    <string name="close_icon">Close search bar</string>
    <string name="results">Results</string>
    <string name="back">Return</string>
    <string name="query">Query</string>
</resources>
