<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khaldane.masterdetailapp.ItemDetails"
    android:background="@color/bg_white"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:id="@+id/rlItemImg"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <ImageView
            android:id="@+id/ivItemImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/listing_image"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/light_gradient"/>

        <LinearLayout
            android:id="@+id/llReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivReturnArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_left"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- About Body -->
    <android.support.v7.widget.CardView
        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@color/off_white"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-25dp"
        android:layout_weight="1.9"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/tvItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/text_primary_gray"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textStyle="bold"
                android:layout_toLeftOf="@+id/tvPrice"
                android:layout_toStartOf="@+id/tvPrice"
                android:layout_alignLeft="@+id/llTutorialSteps"
                android:layout_alignStart="@+id/llTutorialSteps" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/accent_blue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llTutorialSteps"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="15dp"
                android:baselineAligned="false"
                android:layout_below="@+id/tvItemTitle">

                <RelativeLayout
                    android:id="@+id/rlOverviewBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvOverviewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvOverviewHeader"
                        android:layout_marginTop="5dp"/>

                    <RelativeLayout
                        android:id="@+id/rlOverviewAccent"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/accent_blue"
                        android:layout_below="@+id/tvOverviewHeader"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlItemDescBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvItemDescHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_description"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/text_primary_gray"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvItemDescHeader"
                        android:layout_marginTop="5dp"/>

                    <RelativeLayout
                        android:id="@+id/rlItemDescAccent"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/accent_blue"
                        android:layout_below="@+id/tvItemDescHeader"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"/>

                </RelativeLayout>

            </LinearLayout>

            <!-- Overview Body -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llTutorialSteps"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:id="@+id/rlOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_name"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_gray" />

                    <RelativeLayout
                        android:id="@+id/rlTitleLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvTitle"/>

                    <TextView
                        android:id="@+id/tvTitleBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlTitleLine"
                        android:textColor="@color/text_secondary_gray"
                        android:text="@string/item_title"/>

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_gray"
                        android:layout_below="@+id/tvTitleBody"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tvQuantityNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:layout_alignBottom="@+id/tvQuantity"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/text_secondary_gray"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvQuantity"/>

                    <TextView
                        android:id="@+id/tvMaterials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/materials"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_gray"
                        android:layout_below="@+id/tvQuantity"
                        android:layout_marginTop="10dp"/>

                    <RelativeLayout
                        android:id="@+id/rlMaterialLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvMaterials"/>

                    <TextView
                        android:id="@+id/tvMaterialBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlMaterialLine"
                        android:textColor="@color/text_secondary_gray"
                        android:text="@string/lorem"/>

                    <TextView
                        android:id="@+id/tvTags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tags"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_gray"
                        android:layout_below="@+id/tvMaterialBody"
                        android:layout_marginTop="10dp"/>

                    <RelativeLayout
                        android:id="@+id/rlTagLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_gray"
                        android:layout_below="@+id/tvTags"/>

                    <TextView
                        android:id="@+id/tvTagBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rlTagLine"
                        android:textColor="@color/text_secondary_gray"
                        android:text="@string/lorem"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_below="@+id/tvTagBody"
                        android:baselineAligned="false">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tvFavorites"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Favorites"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_primary_gray"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/tvFavoriteNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:layout_alignBottom="@+id/tvFavorites"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:textColor="@color/text_secondary_gray"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_toRightOf="@+id/tvFavorites"
                                android:layout_toEndOf="@+id/tvFavorites"
                                android:gravity="end"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line_gray"
                                android:layout_below="@+id/tvFavorites"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp">

                            <TextView
                                android:id="@+id/tvViews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/views"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/text_primary_gray"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/tvViewNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:layout_alignBottom="@+id/tvViews"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:textColor="@color/text_secondary_gray"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_toRightOf="@+id/tvViews"
                                android:layout_toEndOf="@+id/tvViews"
                                android:gravity="end"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line_gray"
                                android:layout_below="@+id/tvViews"/>

                        </RelativeLayout>


                    </LinearLayout>

                </RelativeLayout>

            </ScrollView>

            <!-- Item Description Body-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llTutorialSteps"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvItemDescBody"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_description"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/text_primary_gray"/>

            </ScrollView>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>